--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ celerybeat-schedule
 # Environments
 .env
 .venv
-env/
+penv/
 venv/
 ENV/
 env.bak/
@@ -107,3 +107,6 @@ venv.bak/
 
 # vscode
 settings.json
+
+# large files
+Project/Data/google.txt
